snippets/deployment.yaml
name: deployment
label: Kubernetes Deployment
description: Kubernetes Deployment
body: |2
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: ${1:myapp}
  spec:
    selector:
      matchLabels:
        app: ${1:myapp}
    template:
      metadata:
        labels:
          app: ${1:myapp}
      spec:
        containers:
        - name: ${1:myapp}
          image: ${2:<Image>}
          ports:
          - containerPort: ${3:<Port>}
