snippets/service-snippet.yaml
name: service
label: Create Kubernetes Service
description: Create Kubernetes Service
body: |2
  kind: Service
  apiVersion: v1
  metadata:
    name: ${1:<my-service>}
  spec:
    selector:
      app: ${2:<MyApp>}
    ports:
    - port: ${3:<Port>}
      targetPort: ${4:<Target Port>}
