snippets/service.yaml
name: service
label: Create Kubernetes Service
description: Create Kubernetes Service
body: |2
  kind: Service
  apiVersion: v1
  metadata:
    name: ${1:myapp}
  spec:
    selector:
      app: ${2:myapp}
    ports:
    - port: ${3:<Port>}
      targetPort: ${4:<Target Port>}
